<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpgradeActivity">

    <TextView
        android:id="@+id/cosmeticTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_title"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/upgradeOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="45dp"
        android:text="Upgrade"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cosmeticTextView" />

    <TextView
        android:id="@+id/upgradeTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginRight="15dp"
        android:text="Upgrade"
        android:textSize="40sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cosmeticTextView" />

    <Button
        android:id="@+id/basePointUpgradeButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="30dp"
        android:text="@string/base_point"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/upgradeOne"
        app:layout_constraintTop_toBottomOf="@id/upgradeOne"
        android:onClick="basePointUpgrade"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/basePointUpgradeButton"
        app:layout_constraintRight_toRightOf="@id/basePointUpgradeButton"
        android:textSize="15sp"
        android:text="@string/cost"/>

    <Button
        android:id="@+id/pointMultiplierUpgradeButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginRight="15dp"
        android:text="@string/point_multiplier"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/upgradeTwo"
        app:layout_constraintTop_toBottomOf="@id/upgradeTwo"
        android:onClick="pointMultiplierUpgrade"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pointMultiplierUpgradeButton"
        app:layout_constraintRight_toRightOf="@id/pointMultiplierUpgradeButton"
        android:textSize="15sp"
        android:text="@string/cost"/>

    <Button
        android:id="@+id/longPress"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginRight="15dp"
        android:text="Long Press"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/upgradeOne"
        app:layout_constraintTop_toBottomOf="@id/basePointUpgradeButton"
        android:onClick="longPressUpgrade"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/longPress"
        app:layout_constraintRight_toRightOf="@id/longPress"
        android:textSize="15sp"
        android:text="@string/cost"/>

    <Button
        android:id="@+id/timerUpgradeButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginRight="15dp"
        android:text="@string/upgrade_timer"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/upgradeTwo"
        app:layout_constraintTop_toBottomOf="@id/pointMultiplierUpgradeButton"
        android:onClick="timerUpgrade"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/timerUpgradeButton"
        app:layout_constraintRight_toRightOf="@id/timerUpgradeButton"
        android:textSize="15sp"
        android:text="@string/cost"/>

    <Button
        android:id="@+id/doublePointsReceivedButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginRight="15dp"
        android:text="@string/double_points_received"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/upgradeOne"
        app:layout_constraintTop_toBottomOf="@id/longPress"
        android:onClick="pointDoubleUpgrade"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/doublePointsReceivedButton"
        app:layout_constraintRight_toRightOf="@id/doublePointsReceivedButton"
        android:textSize="15sp"
        android:text="@string/cost"/>

    <Button
        android:id="@+id/efficientTimerButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginRight="15dp"
        android:text="@string/more_efficient_timer"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/upgradeTwo"
        app:layout_constraintTop_toBottomOf="@id/timerUpgradeButton"
        android:onClick="timerEfficiencyUpgrade"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/efficientTimerButton"
        app:layout_constraintRight_toRightOf="@id/efficientTimerButton"
        android:textSize="15sp"
        android:text="@string/cost"/>


</androidx.constraintlayout.widget.ConstraintLayout>